# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fxtensor_salmon"
version = "0.2.1"
authors = [
  { name="Tadachika Oki", email="sakesnare@gmail.com" }, 
]
description = "Markov Tensor Module"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/salmonsnare/fxtensor-salmon"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fxtensor_salmon"]
